Add main rectangle with styles

--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
     <link rel="stylesheet" href="style.css" />
     <title>Junior Game Editor - Jakub Michalski</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+        <div class="rectangle">
+            <div class="rectangle-content">
+                </div>
+            </div>
+          </div>
+      </div>
+    </div>
+  </body>
 </html>
