--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div class="container">
         <div class="rectangle">
             <div class="rectangle-content">
+                <div class="square"></div>
+                <div class="square2"></div>
                 </div>
             </div>
           </div>
