Add two rectangle with styles

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             <div class="rectangle-content">
                 <div class="square"></div>
                 <div class="square2"></div>
+                <div class="rec1"></div>
+                <div class="rec2"></div>
                 </div>
             </div>
           </div>
