--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <div class="square2"></div>
                 <div class="rec1"></div>
                 <div class="rec2"></div>
+                <div class="circle"></div>
                 </div>
             </div>
           </div>
