--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <div class="rec1"></div>
                 <div class="rec2"></div>
                 <div class="circle"></div>
+                <div class="bed"></div>
                 </div>
             </div>
           </div>
