Add text on bed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <div class="rec1"></div>
                 <div class="rec2"></div>
                 <div class="circle"></div>
-                <div class="bed"></div>
+                <div class="bed">
+                    <span class="text">ABC</span>
                 </div>
             </div>
           </div>
